  * Major GUI update using Twitter Bootstrap
  * Updated to Rails 3.2.8 and Contour 1.0.5
  * Updated Devise configuration files for devise 2.1.0
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0
  * Removed deprecated use of update_attribute for Rails 4.0 compatibility
  * About page reformatted to include links to github and contact information

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.11.9

* Enhancements
  * Cleaning up and preparations for upcoming 0.12.0 release
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name

== 0.11.8

* Enhancements
  * Allows service accounts to create activated users with a JSON web service request
  * Updated to Rails 3.2.3

== 0.11.7

* Bug Fix
  * Non-breaking spaces no longer appear when indenting and grouping search concepts

== 0.11.6

* Enhancements
  * Updated to Rails 3.2.2 and Contour 0.10.2 and Ruby 1.9.3-p125
  * Minor GUI fix for report configuration table when reports are very wide

* Bug Fix
  * Reports that load results from databases that return dates with time now group and stratify correctly

== 0.11.5

* Refactoring
  * Minor GUI change

== 0.11.4

* Enhancements
  * Updating style using Contour Minimalist Theme
  * Streamlined building of Datasets and Reports now underneath the search

== 0.11.3

* Bug Fix
  * Deleting a report/dataset no longer triggers the popup window

== 0.11.2

* Bug Fix
  * Creating a report/dataset now correctly configures the popup window

== 0.11.1

* Enhancements
  * Repositories can now be dynamically added through the Gemfile
  * Date concepts can now be searched
  * Reporting improvements:
    * Dates reporting can now be down by year, by month (default), calendar year week, or day
    * Rows with 0 overall results are no longer displayed in reports